// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c8 check-coverage allows --check-coverage when executing script 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    95.76 |    84.21 |    89.66 |    95.76 |                   |
 bin                |    85.71 |    83.33 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    83.33 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |    97.53 |    79.41 |      100 |    97.53 |                   |
  parse-args.js     |    98.47 |    63.64 |      100 |    98.47 |           107,108 |
  report.js         |    96.71 |    86.96 |      100 |    96.71 |... 10,136,137,138 |
 lib/commands       |    97.73 |    84.21 |     87.5 |    97.73 |                   |
  check-coverage.js |      100 |    92.86 |      100 |      100 |                17 |
  report.js         |    92.59 |       60 |       50 |    92.59 |              9,10 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (95.76%) does not meet global threshold (101%)
"
`;

exports[`c8 check-coverage allows threshold to be applied on per-file basis 1`] = `
",,ERROR: Coverage for lines (78.69%) does not meet threshold (80%) for lib/commands/check-coverage.js
ERROR: Coverage for lines (76%) does not meet threshold (80%) for test/fixtures/normal.js
"
`;

exports[`c8 check-coverage exits with 0 if coverage within threshold 1`] = `",,"`;

exports[`c8 check-coverage exits with 1 if coverage is below threshold 1`] = `
",,ERROR: Coverage for lines (95.34%) does not meet global threshold (101%)
"
`;

exports[`c8 merges reports from subprocesses together 1`] = `
",first

second

--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    84.96 |    76.27 |    74.07 |    84.96 |                   |
 bin                |    85.71 |    66.67 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    66.67 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |    96.11 |    68.97 |      100 |    96.11 |                   |
  parse-args.js     |    96.95 |       50 |      100 |    96.95 |     93,94,107,108 |
  report.js         |    95.39 |    78.95 |      100 |    95.39 |... 10,136,137,138 |
 lib/commands       |    44.32 |    71.43 |    16.67 |    44.32 |                   |
  check-coverage.js |    22.95 |      100 |        0 |    22.95 |... 56,57,58,59,60 |
  report.js         |    92.59 |       60 |       50 |    92.59 |              9,10 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report generates report from existing temporary files 1`] = `
",--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    95.76 |    87.18 |    89.66 |    95.76 |                   |
 bin                |    85.71 |    85.71 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    85.71 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |    97.53 |    83.33 |      100 |    97.53 |                   |
  parse-args.js     |    98.47 |    63.64 |      100 |    98.47 |           107,108 |
  report.js         |    96.71 |       92 |      100 |    96.71 |... 10,136,137,138 |
 lib/commands       |    97.73 |    88.89 |     87.5 |    97.73 |                   |
  check-coverage.js |      100 |    92.31 |      100 |      100 |                17 |
  report.js         |    92.59 |       80 |       50 |    92.59 |              9,10 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report supports --check-coverage, when generating reports 1`] = `
",--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    96.19 |    87.18 |     93.1 |    96.19 |                   |
 bin                |    85.71 |    83.33 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    83.33 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |    97.53 |    83.33 |      100 |    97.53 |                   |
  parse-args.js     |    98.47 |    63.64 |      100 |    98.47 |           107,108 |
  report.js         |    96.71 |       92 |      100 |    96.71 |... 10,136,137,138 |
 lib/commands       |      100 |    89.47 |      100 |      100 |                   |
  check-coverage.js |      100 |    92.31 |      100 |      100 |                17 |
  report.js         |      100 |    83.33 |      100 |      100 |                16 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (96.19%) does not meet global threshold (101%)
"
`;

exports[`c8 reports coverage for script that exits normally 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    84.21 |    88.89 |    66.67 |    84.21 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,"
`;
